<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.sap.cap</groupId>
  <artifactId>sflight</artifactId>
  <version>${revision}</version>
  <packaging>pom</packaging>

  <name>sflight:parent</name>

  <properties>
    <!-- OUR VERSION -->
    <revision>1.0.0-SNAPSHOT</revision>

    <!-- DEPENDENCIES VERSION -->
    <jdk.version>21</jdk.version>
    <cds.services.version>3.9.1</cds.services.version>
    <spring.boot.version>3.4.0</spring.boot.version>
    <cdsdk.version>^8</cdsdk.version>
  </properties>

  <modules>
    <module>srv</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- CDS SERVICES -->
      <dependency>
        <groupId>com.sap.cds</groupId>
        <artifactId>cds-services-bom</artifactId>
        <version>${cds.services.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- SPRING BOOT -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <build>
    <plugins>
      <!-- JAVA VERSION -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>

      <!-- MAKE SPRING BOOT PLUGIN RUNNABLE FROM ROOT -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring.boot.version}</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <!-- POM FLATTENING FOR CI FRIENDLY VERSIONS -->
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>flatten-maven-plugin</artifactId>
        <version>1.7.0</version>
        <configuration>
          <updatePomFile>true</updatePomFile>
          <flattenMode>resolveCiFriendliesOnly</flattenMode>
        </configuration>
        <executions>
          <execution>
            <id>flatten</id>
            <phase>process-resources</phase>
            <goals>
              <goal>flatten</goal>
            </goals>
          </execution>
          <execution>
            <id>flatten.clean</id>
            <phase>clean</phase>
            <goals>
              <goal>clean</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- PROJECT STRUCTURE CHECKS -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.5.0</version>
        <executions>
          <execution>
            <id>Project Structure Checks</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>3.5.0</version>
                </requireMavenVersion>
                <!-- <requireJavaVersion>
                  <version>${jdk.version}</version>
                </requireJavaVersion> -->
                <requireProperty>
                  <property>project.artifactId</property>
                  <regex>[^_]+</regex>
                  <regexMessage>"The artifactId should not contain underscores (_) as this causes issues when deploying to Cloud Foundry."</regexMessage>
                </requireProperty>
                <reactorModuleConvergence/>
              </rules>
              <fail>true</fail>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
